fix(downloads): repair mission adapter compilation